# TeleHack2025

./: README.md  docker-compose.yml
documentviewer-api/: .dockerignore  Dockerfile  config.py  main.py  pyproject.toml
documentviewer-api/core/: config.py
documentviewer-api/middlewares/: logging.py
documentviewer-api/routers/files/: router.py  schemas.py
documentviewer-api/services/: ocr_image_service.py  ocr_scanner_service.py
documentviewer-api/services/ocr_scanner_service/: schemas.py  service.py
documentviewer-api/services/qcr_scanner_service/: schemas.py
telegrambot/: Dockerfile  config.py  logger.py  main.py  pyproject.toml
telegrambot/services/: start_message_service.py  upload_file_service.py  upload_image_service.py
