[project]
name = "documentviewer-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "loguru>=0.7.3",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.8",
    "pillow>=12.0.0",
    "pydantic-settings>=2.12.0",
    "pytesseract>=0.3.13",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.5",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
fixable = ["B", "C", "W", "E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
