[project]
name = "telegrambot"
version = "0.1.0"
description = "this is a telegram bot for a telehack2025"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.22.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
]
[project.optional-dependencies]
dev = [
    "ruff>=0.14.5",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
fixable = ["B", "C", "W", "E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"